Use java.util.Base64